<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setupScreen3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/S3_Title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:onClick="onClickNext"
        android:text="@string/Next" />

    <RadioGroup
        android:id="@+id/optionSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checkedButton="@+id/radioOption1"
        android:padding="5dp">

        <TextView
            android:id="@+id/s3Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/S3Title1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioOption1"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:text="@string/option1"
            android:textSize="15sp"
            android:checked="false"
            android:clickable="true"
            android:enabled="true" />

        <TextView
            android:id="@+id/s3Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/S3Title2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioOption2"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:text="@string/option2"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/s3Title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/S3Title3"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioOption3"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:text="@string/option3"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/s3Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/S3Title4"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioOption4"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:text="@string/option4"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/s3Title5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/S3Title5"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioOption5"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:checked="false"
            android:clickable="true"
            android:enabled="true"
            android:text="@string/option5"
            android:textSize="15sp" />
    </RadioGroup>

</RelativeLayout>