<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setup_s2_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/yourBMI"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:contentDescription="@string/blueCircle"
        android:src="@drawable/circle" />

    <TextView
        android:id="@+id/showMeBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/bmiShow"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="40sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_toRightOf="@+id/textView4"
        android:onClick="onClickNext2"
        android:text="@string/Next" />

    <ImageView
        android:id="@+id/fatTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nextButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/nextButton"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:contentDescription="@string/fatTable"
        android:cropToPadding="false"
        android:src="@drawable/fat_table" />

    <TextView
        android:id="@+id/minimumTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/showMeBMI"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</RelativeLayout>