<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".firstScreen">

    <TextView
        android:id="@+id/textViewLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/BMI_Title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S1_Weight"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/heighInput"
        android:layout_toLeftOf="@+id/textViewLog"
        android:layout_toStartOf="@+id/textViewLog" />

    <EditText
        android:id="@+id/weighInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/weightTextView"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginStart="52dp"
        android:layout_toEndOf="@+id/weightTextView"
        android:layout_toRightOf="@+id/weightTextView"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S1_Height"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/nextButton"
        android:layout_alignRight="@+id/weightTextView"
        android:layout_alignEnd="@+id/weightTextView"
        android:layout_marginBottom="149dp" />

    <EditText
        android:id="@+id/heighInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/heightTextView"
        android:layout_alignLeft="@+id/weighInput"
        android:layout_alignStart="@+id/weighInput"
        android:layout_marginRight="52dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/textViewLog"
        android:layout_toRightOf="@+id/textViewLog"
        android:onClick="onClickNext"
        android:text="@string/Next" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Enter your Weight in killograms (example 45.5) and your Height in meters (example 1.75) "
        android:id="@+id/textView21"
        android:layout_below="@+id/textViewLog"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

</RelativeLayout>
