<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Select category to search"
        android:id="@+id/textView"
        android:layout_marginTop="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fruitsImgView"
        android:onClick="fruitNext"
        android:src="@drawable/fruits1"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7"
        android:layout_marginTop="44dp"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/drinksImgView"
        android:onClick="drinksNext"
        android:src="@drawable/fruits1"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        android:layout_below="@+id/fruitsImgView"
        android:layout_alignLeft="@+id/fruitsImgView"
        android:layout_alignStart="@+id/fruitsImgView"
        android:layout_marginTop="58dp"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myFoodImgView"
        android:onClick="myFoodNext"
        android:src="@drawable/fruits1"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/drinksImgView"
        android:layout_alignStart="@+id/drinksImgView"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vegImgView"
        android:onClick="vegNext"
        android:src="@drawable/fruits1"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        android:nestedScrollingEnabled="false"
        android:layout_alignTop="@+id/fruitsImgView"
        android:layout_toLeftOf="@+id/textView19"
        android:layout_toStartOf="@+id/textView19"
        android:layout_marginRight="30dp"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/meatImgView"
        android:onClick="meatNext"
        android:src="@drawable/fruits1"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        android:layout_alignBottom="@+id/drinksImgView"
        android:layout_alignRight="@+id/vegImgView"
        android:layout_alignEnd="@+id/vegImgView"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/snacksImgView"
        android:onClick="snacksNext"
        android:src="@drawable/fruits1"
        android:adjustViewBounds="true"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        android:scaleType="fitCenter"
        android:layout_alignTop="@+id/myFoodImgView"
        android:layout_alignRight="@+id/meatImgView"
        android:layout_alignEnd="@+id/meatImgView"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FoodCat_meat"
        android:id="@+id/textView6"
        android:layout_above="@+id/meatImgView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FoodCat_drinks"
        android:id="@+id/textView7"
        android:layout_above="@+id/meatImgView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FoodCat_veg"
        android:id="@+id/textView8"
        android:layout_above="@+id/vegImgView"
        android:layout_alignLeft="@+id/vegImgView"
        android:layout_alignStart="@+id/vegImgView"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FoodCat_fruits"
        android:id="@+id/textView9"
        android:layout_above="@+id/vegImgView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FoodCat_snacks"
        android:id="@+id/textView18"
        android:layout_above="@+id/snacksImgView"
        android:layout_alignRight="@+id/textView8"
        android:layout_alignEnd="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/FoodCat_myfood"
        android:id="@+id/textView19"
        android:layout_above="@+id/snacksImgView"
        android:layout_alignRight="@+id/fruitsImgView"
        android:layout_alignEnd="@+id/fruitsImgView" />

</RelativeLayout>